--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rxjs": "^7.8.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "unique-username-generator": "^1.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
